Closed
Bug 50972
Opened 24 years ago
Closed 24 years ago
Profile Migrator fails
Categories
(Core Graveyard :: Profile: Migration, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: fireball, Assigned: racham)
References
Details
(Keywords: smoketest, Whiteboard: [dogfood+])
Attachments
(1 file)
833 bytes,
patch
|
Details | Diff | Splinter Review |
Overview Description:
I deleted all the files which Mozilla creates before unpacking the new build,
saying I am going from a clean build.
Then I fire up Mozilla, it wants to start Profile Migration and displays the
(broken) Dialog Box (but the fact its not displaying properly is not the problem
here). I can click "Convert", then I first saw something like this in the
console:
AutoMigration failed. Let's create a default 5.0 profile.
Then it crashed:
MOZILLA caused an invalid page fault in
module PROFILE.DLL at 016f:607317fe.
Registers:
EAX=00000000 CS=016f EIP=607317fe EFLGS=00010246
EBX=0087c2b0 SS=0177 ESP=0068fbb4 EBP=0068fc30
ECX=0087c244 DS=0177 ESI=80000000 FS=655f
EDX=0046003c ES=0177 EDI=00000000 GS=0000
Bytes at CS:EIP:
66 39 38 0f 84 ec 01 00 00 8b 45 f8 c7 05 58 98
Stack dump:
00000000 0087c2b0 00800d50 60739894 60739894 00000000 60739894 0068fc10 60739894
60739894 00000000 60739894 0068fc10 60d969b0 60737248 00000000
I check out what it did and what not and find it created the
/Windows/Mozilla/registry.dat and the /Windows/mozregistry.dat. So if I start it
now its still asking me with the Profile Migration DialogBox...I hit "Convert"
and then it crashes w/o console notice:
MOZILLA caused an invalid page fault in
module XPCOM.DLL at 016f:60d68a1d.
Registers:
EAX=00000000 CS=016f EIP=60d68a1d EFLGS=00010246
EBX=607372c4 SS=0177 ESP=0068fb88 EBP=0068fc30
ECX=00000000 DS=0177 ESI=0087c2b0 FS=504f
EDX=00000000 ES=0177 EDI=00000000 GS=0000
Bytes at CS:EIP:
39 41 0c 74 03 8b 41 14 c3 8b 54 24 08 33 c0 3b
Stack dump:
60733976 00000000 00000000 0087c2b0 0087c2b0 60731aac 0087c2b0 00000000 80000000
0087c2b0 607317d2 00000000 0087c2b0 00800d50 60739894 60739894
And this happens now everytime I start it up. When I kill the two .dat's again,
then you can start reading on the top of this report again.
Steps to Reproduce:
1) Fire up a clean Mozilla build
2) Click on "Convert" when the Profile Migrator asks
Actual Results:
Crash, details see above.
Expected Results:
Should convert the profile, then load Mozilla.
Reproducibility:
100%
Build Date & Platform Bug Found:
2000083112 on Win32
Additional Builds and Platforms Tested On:
Additional Information:
This actually looks like a Profile Manager bug, not a profile migration bug.
Before I reassign it, a little more information would be helpful. When you said
you deleted the two .dat files, what were they?
You need to make sure you deleted the registry.dat file from the Mozilla
directory. Did you do that?
This is going to be hard. From what I know about another related bug 50824,
windows95 OS is not returning AppData folder value on some machines (may be
missing some configuration). So, I put in a small patch (will post in the next
update) that falls back on the windows directory in such case. I have asked
grace, ji and teruko to try it out.
I think this happens only on win95. I am taking this bug thinking that the above
could be the reason. Will keep dan bragg in the cc list.
Sean, you have win98->win2000 connection. Do you also have win95->win2000 ?
Trying out optimized bits might be a efficient way to kill this bug. If any of
you know about such an arrangement, please let me know. It would be much
quicker.
Do we usually make win95 bugs as smoketest blockers....?
Assignee: dbragg → racham
*** Bug 50975 has been marked as a duplicate of this bug. ***
I don't think I would hold the tree for this... Unless you convince me otherwise
I will open the tree once the Mac menu problems are solved.
Reporter | ||
Comment 7•24 years ago
|
||
Well dan, I mentioned the two .dat's right in the same text above. Thats why I
didn't respecify them below:
/Windows/Mozilla/registry.dat and the /Windows/mozregistry.dat
But the problem seems to be tracked down anyway.
fix checked in for racham.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 10•24 years ago
|
||
*** Bug 50824 has been marked as a duplicate of this bug. ***
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•