fixing bug #50972.  This checkin is for racham.  r=me. smoketest blocker, dogfood+